--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -1,21 +1,10 @@
-/* Set volume div */
-.volumeBox {
-  float: right;
-  border: 2px solid;
-  width: 1.5%;
-  height: 6.25vh;
-  margin-top: 1.5vh;
-  margin-left: 0.2%;
-}
-/* Set margin for last volume div */
-#volume10 {
-  margin-right: 1%;
-}
-
-/* Set speaker image */
-#volumeImage {
-  height: 10vh;
-  float: right;
+/* Set menus space */
+#menuBar {
+  position: relative;
+  float: left;
+  width: 23%;
+  height: 97vh;
+  border-right: 1px solid;
 }
 /* Set logo image */
 #logo {
@@ -23,14 +12,14 @@
   width: auto;
   margin: 5px 10px;
 }
-
-/* Set menus space */
-#menuBar {
-  float: left;
-  width: 23%;
-  height: 97vh;
-  border-right: 1px solid;
+/* Set speaker image */
+#volumeImage {
+  position: absolute;
+  height: 10vh;
+  bottom: 10px;
+  left: 10px;
 }
+
 /* explaination part */
 .menuType {
   list-style-type: none;
