--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -1,16 +1,68 @@
+/* body에 글꼴 적용 */
+@font-face {
+  font-family: 'GyeonggiTitleLight';
+  src: url('https://cdn.jsdelivr.net/gh/wizfile/font/GyeonggiTitleLight.eot');
+  src:url('https://cdn.jsdelivr.net/gh/wizfile/font/GyeonggiTitleLight.woff') format('woff');
+  font-style: normal;
+}
+
+body, button {
+  font-family: 'GyeonggiTitleLight';
+  font-size: 20px;
+}
+button {
+  background-color: cornflowerblue;
+  color: white;
+  border-radius: 7px;
+  border: none;
+  padding: 5px 10px;
+}
+li { 
+  list-style-type: none; 
+  margin-left: -38px;
+}
+li button { font-size: 15px; }
+
+.popupContainer {
+  position: fixed;
+  margin: -8px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+#confirm {
+  display: none;
+}
+#scanning {
+  display: none;
+}
+.popup {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+.popup button {
+  padding: 10px 30px;
+  margin: 20px;
+}
+
 /* Set menus space */
 #menuBar {
   position: relative;
   float: left;
-  width: 23%;
+  width: 22%;
   height: 97vh;
   border-right: 1px solid;
 }
 /* Set logo image */
 #logo {
-  height: 10vh;
+  height: 12vh;
   width: auto;
-  margin: 5px 10px;
+  margin: 10px 10px 0px 10px;
 }
 /* Set speaker image */
 #volumeImage {
@@ -19,12 +71,19 @@
   bottom: 10px;
   left: 10px;
 }
+#cameraImage {
+  position: absolute;
+  height: 10vh;
+  bottom: 10px;
+  left: 38%;
+}
 
 /* explaination part */
 .menuType {
   list-style-type: none;
   margin: 4vh 0px 0.5vh 15px; /* top, right, bottom, left */
   font-weight: bold;
+  font-size: 16px;
 }
 /* select site part */
 .menuLink {
@@ -54,27 +113,19 @@
 
 /* iframe 속성 사이즈 */
 iframe {
+  position: relative;
   float: right;
-  width: 76%;
-  height: 85vh;
+  width: 77.5%;
+  height: 97.5vh;
   border: none;
 }
 
 /* html 폴더 안의 모든 파일의 body id */
 #frame {
-  border-radius: 20px;
-  border: 1px solid rgba(0, 0, 0, .5);
+  border-radius: 10px;
+  border: 1px solid;
   width: 92%;
   height: 89vh;
   overflow: hidden;
   padding:3%;
-}
-
-/* 제출 버튼 디자인 */
-button {
-  background-color: cornflowerblue;
-  color: white;
-  border-radius: 5px;
-  border: none;
-  padding: 5px 10px;
 }
