--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -1,131 +1,126 @@
 /* body에 글꼴 적용 */
 @font-face {
-  font-family: 'GyeonggiTitleLight';
-  src: url('https://cdn.jsdelivr.net/gh/wizfile/font/GyeonggiTitleLight.eot');
-  src:url('https://cdn.jsdelivr.net/gh/wizfile/font/GyeonggiTitleLight.woff') format('woff');
-  font-style: normal;
+    font-family: 'GyeonggiTitleLight';
+    src:url('https://cdn.jsdelivr.net/gh/wizfile/font/GyeonggiTitleLight.woff') format('woff');
+    font-style: normal;
 }
 
 body, button {
-  font-family: 'GyeonggiTitleLight';
-  font-size: 20px;
+    font-family: 'GyeonggiTitleLight';
+    font-size: 20px;
 }
 button {
-  background-color: cornflowerblue;
-  color: white;
-  border-radius: 7px;
-  border: none;
-  padding: 5px 10px;
+    background-color: cornflowerblue;
+    color: white;
+    border-radius: 7px;
+    border: none;
+    padding: 5px 10px;
 }
 li { 
-  list-style-type: none; 
-  margin-left: -38px;
+    list-style-type: none; 
+    margin-left: -38px;
 }
 li button { font-size: 15px; }
 
 .popupContainer {
-  position: fixed;
-  margin: -8px;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
+    position: fixed;
+    margin: -8px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
 }
-#confirm {
-  display: none;
-}
-#scanning {
-  display: none;
-}
+#confirm { display: none; }
+#scanning { display: none; }
 .popup {
-  background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 .popup button {
-  padding: 10px 30px;
-  margin: 20px;
+    padding: 10px 30px;
+    margin: 20px;
 }
 
 /* Set menus space */
 #menuBar {
-  position: relative;
-  float: left;
-  width: 22%;
-  height: 97vh;
-  border-right: 1px solid;
+    position: relative;
+    float: left;
+    width: 22%;
+    height: 97vh;
+    border-right: 1px solid;
 }
 /* Set logo image */
 #logo {
-  height: 12vh;
-  width: auto;
-  margin: 10px 10px 0px 10px;
+    height: 12vh;
+    width: auto;
+    margin: 10px 10px 0px 10px;
 }
 /* Set speaker image */
 #volumeImage {
-  position: absolute;
-  height: 10vh;
-  bottom: 10px;
-  left: 10px;
+    position: absolute;
+    height: 10vh;
+    bottom: 10px;
+    left: 10px;
 }
 #cameraImage {
-  position: absolute;
-  height: 10vh;
-  bottom: 10px;
-  left: 38%;
+    position: absolute;
+    height: 10vh;
+    bottom: 10px;
+    left: 38%;
 }
 
 /* explaination part */
 .menuType {
-  list-style-type: none;
-  margin: 4vh 0px 0.5vh 15px; /* top, right, bottom, left */
-  font-weight: bold;
-  font-size: 16px;
+    list-style-type: none;
+    margin: 4vh 0px 0.5vh 15px; /* top, right, bottom, left */
+    font-weight: bold;
+    font-size: 16px;
 }
 /* select site part */
 .menuLink {
-  list-style-type: none;
-  font-size: 30px;
-  padding: 5px 0px;
-  margin: 0px 15px 0px 10px;
-  border-radius: 10px;
+    list-style-type: none;
+    font-size: 30px;
+    padding: 5px 0px;
+    margin: 0px 15px 0px 10px;
+    border-radius: 10px;
 }
 /* put icon on the menu */
 #menu1 {
-  padding-left: 50px;
-  background: url("../img/menuDashboard_black.png") 5% 50% no-repeat;
+    padding-left: 50px;
+    background: url("../img/menuDashboard_black.png") 5% 50% no-repeat;
 }
 #menu2 {
-  padding-left: 50px;
-  background: url("../img/menuUser_black.png") 5% 50% no-repeat;
+    padding-left: 50px;
+    background: url("../img/menuUser_black.png") 5% 50% no-repeat;
 }
 #menu3 {
-  padding-left: 50px;
-  background: url("../img/menuHowtocook_black.png") 5% 50% no-repeat;
+    padding-left: 50px;
+    background: url("../img/menuHowtocook_black.png") 5% 50% no-repeat;
 }
 #menu4 {
-  padding-left: 50px;
-  background: url("../img/menuGuide_black.png") 5% 50% no-repeat;
+    padding-left: 50px;
+    background: url("../img/menuGuide_black.png") 5% 50% no-repeat;
 }
 
 /* iframe 속성 사이즈 */
 iframe {
-  position: relative;
-  float: right;
-  width: 77.5%;
-  height: 97.5vh;
-  border: none;
+    position: relative;
+    float: right;
+    width: 77.5%;
+    height: 97.5vh;
+    border: none;
 }
 
 /* html 폴더 안의 모든 파일의 body id */
 #frame {
-  border-radius: 10px;
-  border: 1px solid;
-  width: 92%;
-  height: 89vh;
-  overflow: hidden;
-  padding:3%;
+    border-radius: 10px;
+    border: 1px solid;
+    width: 92%;
+    height: 89vh;
+    overflow: hidden;
+    padding:3%;
 }
