--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -23,7 +23,7 @@ li {
 li button { font-size: 15px; }
 
 .popupContainer {
-    position: fixed;
+    position: absolute;
     margin: -8px;
     width: 100%;
     height: 100%;
@@ -33,6 +33,7 @@ li button { font-size: 15px; }
 }
 #confirm { display: none; }
 #scanning { display: none; }
+#specific { display: none; }
 .popup {
     background: #fff;
     padding: 20px;
@@ -117,10 +118,20 @@ iframe {
 
 /* html 폴더 안의 모든 파일의 body id */
 #frame {
+    position: relative;
     border-radius: 10px;
     border: 1px solid;
     width: 92%;
     height: 89vh;
     overflow: hidden;
     padding:3%;
+}
+
+.list2 {
+    position: absolute;
+    top: 49vh;
+}
+.lists2 {
+    position: absolute;
+    top: 58vh;
 }
