--- a/mobile_app/app/src/main/res/layout/today_activity_main.xml
+++ b/mobile_app/app/src/main/res/layout/today_activity_main.xml
@@ -1,8 +1,18 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+tools:context=".TodayActivity"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:gravity="center"
+android:orientation="vertical">
+<TextView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".TodayActivity">
+    android:layout_height="wrap_content"
+    android:text="스캔한 제품(오늘)"
+    android:textSize="30dp"/>
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,3 +21,4 @@
         android:textSize="20dp"
         android:id="@+id/TodayText"/>
 </ScrollView>
+</LinearLayout>
